finished annotataed scorecard

--- a/data/index_full.html
+++ b/data/index_full.html
@@ -115,7 +115,41 @@
 			</p>
 		  </div>
 	  </div>
-
+	  
+    <div class="image">
+		  <img class="image__img" src="connectivity.png" alt="Connectivity">
+		  <div class="image__overlay">
+			<div class="image__title">Connectivity</div>
+			<p class="image__description">
+				Connectivity is a measure of how much contiguous vegetation exists on
+				the site. A connectivity value close to one indicates a high amount of
+				contiguous or continuous vegetation throughout the site; a value closer
+				to zero suggests very isolated patches of vegetation. Note, this measure
+				is a composite value based on the scores obtained at five heights - by
+				default 0.3m, 1.0m, 1.7m, 2.4m, and 3.1m - also indicated by the colour
+				gradients in the bars (lower heights toward the inner circle). As the
+				vegetation matures over time, connectivity changes, and each bar
+				represents a year in the specified growth simulation. The grey portions
+				of the bars represent the hypothetical maximums.
+			</p>
+		  </div>
+	  </div>
+	  
+    <div class="image">
+		  <img class="image__img" src="coverage.png" alt="Coverage">
+		  <div class="image__overlay">
+			<div class="image__title">Coverage</div>
+			<p class="image__description">
+				This plot indicates the relative proportion of vegetation at a one meter
+				cut height across the site, and how it changes through time. It is a
+				coarse proxy for measuring the presence of understory vegetation on site.
+				Each bar represents a year in the specified growth simulation. It is
+				preferable to not see any reductions in the bar heights throughout time
+				as this indicates diminishing undersory as the site vegetation matures.
+			</p>
+		  </div>
+	  </div>
+	  
   </div> 
 </body>
 </html>
