--- a/figs/web/averley/index.html
+++ b/figs/web/averley/index.html
@@ -41,7 +41,7 @@
     <div class="image">
 		  <img class="image__img" src="size.png" alt="Size">
 		  <div class="image__overlay">
-			<div class="image__title">Density</div>
+			<div class="image__title">Size</div>
 			<p class="image__description">
 				This plot represents the proportion of plants that will fall within
 				predetermined height categories at maturity. The predetermined
