--- a/figs/web/torquay/index.html
+++ b/figs/web/torquay/index.html
@@ -145,6 +145,7 @@
 				Each bar represents a year in the specified growth simulation. It is
 				preferable to not see any reductions in the bar heights throughout time
 				as this indicates diminishing understory as the site vegetation matures.
+				The grey portions	of the bars represent the hypothetical maximums
 			</p>
 		  </div>
 	  </div>
