--- a/data/index_full.html
+++ b/data/index_full.html
@@ -25,20 +25,6 @@
 	  </div>
 	  
     <div class="image">
-		  <img class="image__img" src="texture.png" alt="Texture">
-		  <div class="image__overlay">
-			<div class="image__title">Texture</div>
-			<p class="image__description">
-				Texture describes the roughness of the foliage. This is	primarily an
-				aesthetic metric that is used by the designer, however, may
-				have implications for target species. Texture categories should be
-				balanced across the site unless target species are identified - in
-				which case beneficial classes may be more dominantly represented.
-			</p>
-		  </div>
-	  </div>
-	  
-    <div class="image">
 		  <img class="image__img" src="size.png" alt="Size">
 		  <div class="image__overlay">
 			<div class="image__title">Size</div>
@@ -53,6 +39,20 @@
 		  </div>
 	  </div>
 	  
+    <div class="image">
+		  <img class="image__img" src="texture.png" alt="Texture">
+		  <div class="image__overlay">
+			<div class="image__title">Texture</div>
+			<p class="image__description">
+				Texture describes the roughness of the foliage. This is	primarily an
+				aesthetic metric that is used by the designer, however, may
+				have implications for target species. Texture categories should be
+				balanced across the site unless target species are identified - in
+				which case beneficial classes may be more dominantly represented.
+			</p>
+		  </div>
+	  </div>
+
     <div class="image">
 		  <img class="image__img" src="endemism.png" alt="Endemism">
 		  <div class="image__overlay">
@@ -111,7 +111,7 @@
 				Each bar represents a year in the specified growth simulation. It is
 				preferable to not see any reductions in the bar heights throughout time
 				as this indicates diminishing understory as the site vegetation matures.
-				The grey portions	of the bars represent the hypothetical maximums
+				The grey portions	of the bars represent the hypothetical maximums.
 			</p>
 		  </div>
 	  </div>
