--- a/figs/web/conn_test/index.html
+++ b/figs/web/conn_test/index.html
@@ -8,119 +8,110 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+   <center><h1>CONNECTIVITY TEST - Overall score: 0.56</h1></center>
    <div class="grid-container">
-     
-    <div class="image">
+             <div class="image">
 		  <img class="image__img" src="density.png" alt="Density">
 		  <div class="image__overlay">
 			<div class="image__title">Density</div>
-			<p class="image__description">
-				Density describes the interstitial space within the foliage. This is
+			<p class="image__description">Density describes the interstitial space within the foliage. This is
 				primarily an aesthetic metric that is used by the designer, however, may
 				have implications for target species. Density categories should be
 				balanced across the site unless target species are identified - in
-				which case beneficial classes may be more dominantly represented.
-			</p>
+				which case beneficial classes may be more dominantly represented.</p>
 		  </div>
 	  </div>
-	  
-    <div class="image">
-		  <img class="image__img" src="texture.png" alt="Texture">
-		  <div class="image__overlay">
-			<div class="image__title">Texture</div>
-			<p class="image__description">
-				Texture describes the roughness of the foliage. This is	primarily an
-				aesthetic metric that is used by the designer, however, may
-				have implications for target species. Texture categories should be
-				balanced across the site unless target species are identified - in
-				which case beneficial classes may be more dominantly represented.
-			</p>
-		  </div>
-	  </div>
-	  
-    <div class="image">
+             <div class="image">
 		  <img class="image__img" src="size.png" alt="Size">
 		  <div class="image__overlay">
 			<div class="image__title">Size</div>
-			<p class="image__description">
-				This plot represents the proportion of plants that will fall within
+			<p class="image__description">This plot represents the proportion of plants that will fall within
 				predetermined height categories at maturity. The predetermined
 				height categories cover off on many species' requirements and should be
 				fairly balanced across the site. In some cases, identified target
 				species may require particular classes to be more dominantly
-				represented.
-			</p>
+				represented.</p>
 		  </div>
 	  </div>
-	  
-    <div class="image">
+             <div class="image">
+		  <img class="image__img" src="texture.png" alt="Texture">
+		  <div class="image__overlay">
+			<div class="image__title">Texture</div>
+			<p class="image__description">Texture describes the roughness of the foliage. This is	primarily an
+				aesthetic metric that is used by the designer, however, may
+				have implications for target species. Texture categories should be
+				balanced across the site unless target species are identified - in
+				which case beneficial classes may be more dominantly represented.</p>
+		  </div>
+	  </div>
+             <div class="image">
 		  <img class="image__img" src="endemism.png" alt="Endemism">
 		  <div class="image__overlay">
 			<div class="image__title">Endemism</div>
-			<p class="image__description">
-				This plot reports the proportion of species that are native to the
+			<p class="image__description">This plot reports the proportion of species that are native to the
 				country, not necessarily site, where the project will be realised. It is
 				normally good practice to maximise the amount of native/local vegetation
 				as other native species will have evolved to best utilise them. In some
 				cases, non-aggressive exotic plants that benefit a target species or
-				to create a novel ecosystem may be selected.
-			</p>
+				to create a novel ecosystem may be selected.</p>
 		  </div>
 	  </div>
-
-    <div class="image">
+             <div class="image">
 		  <img class="image__img" src="richness.png" alt="Richness">
 		  <div class="image__overlay">
 			<div class="image__title">Richness</div>
-			<p class="image__description">
-				This plot illustrates the overall diversity and balance of plant species
+			<p class="image__description">This plot illustrates the overall diversity and balance of plant species
 				used on site. The evenness score compares the total numbers of each
 				species (also depicted in the size of the gray bars) - a score close to
 				zero indicates the dominance of a few species; a score of one suggests
 				a more balanced representation of species. It is also important to
 				examine the number of gray bars as this represents the total number of
 				different species on site and should be as large as possible to
-				support biodiversity.
-			</p>
+				support biodiversity.</p>
 		  </div>
 	  </div>
-
-    <div class="image">
-		  <img class="image__img" src="patterning.png" alt="Distribution">
+             <div class="image">
+		  <img class="image__img" src="distribution.png" alt="Distribution">
 		  <div class="image__overlay">
 			<div class="image__title">Distribution</div>
-			<p class="image__description">
-				This plot reports an overall score that indicates how well different
+			<p class="image__description">This plot reports an overall score that indicates how well different
 				species are distributed across a site. A low value (approaching zero)
 				indicates that species are clustered or clumped and unevenly distributed
 				around a site. A high value (approaching one) suggests that the species
 				are more randomly and evenly distributed - and closer to what we may
-				encounter in an undistrurbed landscape at a smaller scale.
-			</p>
+				encounter in an undistrurbed landscape at a smaller scale.</p>
 		  </div>
 	  </div>
-	  
-    <div class="image">
+             <div class="image">
+		  <img class="image__img" src="coverage.png" alt="Coverage">
+		  <div class="image__overlay">
+			<div class="image__title">Coverage</div>
+			<p class="image__description">This plot indicates the relative proportion of vegetation at a one meter
+				cut height across the site, and how it changes through time. It is a
+				coarse proxy for measuring the presence of understory vegetation on site.
+				Each bar represents a year in the specified growth simulation. It is
+				preferable to not see any reductions in the bar heights throughout time
+				as this indicates diminishing understory as the site vegetation matures.
+				The grey portions	of the bars represent the hypothetical maximums</p>
+		  </div>
+	  </div>
+             <div class="image">
 		  <img class="image__img" src="phenology.png" alt="Phenology">
 		  <div class="image__overlay">
 			<div class="image__title">Phenology</div>
-			<p class="image__description">
-				Phenology is a measure of timing of recurring biological events - in
+			<p class="image__description">Phenology is a measure of timing of recurring biological events - in
 				this case, which months that plants are flowering in throughout the
 				year. The bars represent the relative proportions of plants that flower
 				in each respective month. In order to provide consistent resources for
 				species	throughout the year, these bars should be relatively balanced.
-				At a minimum, all months should have some flowering plants.
-			</p>
+				At a minimum, all months should have some flowering plants.</p>
 		  </div>
 	  </div>
-	  
-    <div class="image">
+             <div class="image">
 		  <img class="image__img" src="connectivity.png" alt="Connectivity">
 		  <div class="image__overlay">
 			<div class="image__title">Connectivity</div>
-			<p class="image__description">
-				Connectivity is a measure of how much contiguous vegetation exists on
+			<p class="image__description">Connectivity is a measure of how much contiguous vegetation exists on
 				the site. A connectivity value close to one indicates a high amount of
 				contiguous or continuous vegetation throughout the site; a value closer
 				to zero suggests very isolated patches of vegetation. Note, this measure
@@ -129,27 +120,10 @@
 				gradients in the bars (lower heights toward the inner circle). As the
 				vegetation matures over time, connectivity changes, and each bar
 				represents a year in the specified growth simulation. The grey portions
-				of the bars represent the hypothetical maximums.
-			</p>
+				of the bars represent the hypothetical maximums.</p>
 		  </div>
 	  </div>
-	  
-    <div class="image">
-		  <img class="image__img" src="coverage.png" alt="Coverage">
-		  <div class="image__overlay">
-			<div class="image__title">Coverage</div>
-			<p class="image__description">
-				This plot indicates the relative proportion of vegetation at a one meter
-				cut height across the site, and how it changes through time. It is a
-				coarse proxy for measuring the presence of understory vegetation on site.
-				Each bar represents a year in the specified growth simulation. It is
-				preferable to not see any reductions in the bar heights throughout time
-				as this indicates diminishing understory as the site vegetation matures.
-				The grey portions	of the bars represent the hypothetical maximums
-			</p>
-		  </div>
-	  </div>
-	  
-  </div> 
+               </div> 
 </body>
 </html>
+             
