--- a/figs/web/booyeembara/index.html
+++ b/figs/web/booyeembara/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-   <center><h1>BOOYEEMBARA BUSHLAND - Overall score: 0.72</h1></center>
+   <center><h1>BUSHLAND - Overall score: 0.68</h1></center>
    <div class="grid-container">
              <div class="image">
 		  <img class="image__img" src="density.png" alt="Density">
@@ -16,8 +16,8 @@
 			<div class="image__title">Density</div>
 			<p class="image__description">Density describes the interstitial space within the foliage. This is
 				primarily an aesthetic metric that is used by the designer, however, may
-				have implications for target species. Density categories should be
-				balanced across the site unless target species are identified - in
+				have implications for target species. All three density categories should be
+				represented and balanced across the site unless target species are identified - in
 				which case beneficial classes may be more dominantly represented.</p>
 		  </div>
 	  </div>
@@ -26,9 +26,9 @@
 		  <div class="image__overlay">
 			<div class="image__title">Size</div>
 			<p class="image__description">This plot represents the proportion of plants that will fall within
-				predetermined height categories at maturity. The predetermined
-				height categories cover off on many species' requirements and should be
-				fairly balanced across the site. In some cases, identified target
+				predetermined height categories at maturity. The predetermined four
+				height categories cover off on many species' requirements and should all
+				be represented and balanced across the site. In some cases, identified target
 				species may require particular classes to be more dominantly
 				represented.</p>
 		  </div>
@@ -37,10 +37,10 @@
 		  <img class="image__img" src="texture.png" alt="Texture">
 		  <div class="image__overlay">
 			<div class="image__title">Texture</div>
-			<p class="image__description">Texture describes the roughness of the foliage. This is	primarily an
+			<p class="image__description">Texture describes the roughness of the foliage. This is primarily an
 				aesthetic metric that is used by the designer, however, may
-				have implications for target species. Texture categories should be
-				balanced across the site unless target species are identified - in
+				have implications for target species. All three texture categories should be
+				represented and balanced across the site unless target species are identified - in
 				which case beneficial classes may be more dominantly represented.</p>
 		  </div>
 	  </div>
