--- a/figs/web/sample_landscape/index.html
+++ b/figs/web/sample_landscape/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-   <center><h1>SAMPLE LANDSCAPE - Overall score: 0.51</h1></center>
+   <center><h1>SAMPLE LANDSCAPE - Overall score: 0.55</h1></center>
    <div class="grid-container">
              <div class="image">
 		  <img class="image__img" src="density.png" alt="Density">
@@ -56,7 +56,11 @@
 				to create a novel ecosystem may be selected.</p>
 		  </div>
 	  </div>
-             <div class="image">
+             <div>
+		  <div>
+			<p></p>
+		  </div>
+	  </div><div class="image">
 		  <img class="image__img" src="richness.png" alt="Richness">
 		  <div class="image__overlay">
 			<div class="image__title">Richness</div>
@@ -68,18 +72,6 @@
 				examine the number of gray bars as this represents the total number of
 				different species on site and should be as large as possible to
 				support biodiversity.</p>
-		  </div>
-	  </div>
-             <div class="image">
-		  <img class="image__img" src="distribution.png" alt="Distribution">
-		  <div class="image__overlay">
-			<div class="image__title">Distribution</div>
-			<p class="image__description">This plot reports an overall score that indicates how well different
-				species are distributed across a site. A low value (approaching zero)
-				indicates that species are clustered or clumped and unevenly distributed
-				around a site. A high value (approaching one) suggests that the species
-				are more randomly and evenly distributed - and closer to what we may
-				encounter in an undistrurbed landscape at a smaller scale.</p>
 		  </div>
 	  </div>
              <div class="image">
