revised score sheet

--- a/figs/web/sample_landscape/index.html
+++ b/figs/web/sample_landscape/index.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-   <center><h1>SAMPLE LANDSCAPE - Overall score: 0.55</h1></center>
    <div class="grid-container">
              <div class="image">
 		  <img class="image__img" src="density.png" alt="Density">
@@ -56,11 +55,15 @@
 				to create a novel ecosystem may be selected.</p>
 		  </div>
 	  </div>
-             <div>
-		  <div>
-			<p></p>
+             <div class="image">
+		  <img class="image__img" src="total.png" alt="Total">
+		  <div class="image__overlay">
+			<div class="image__title">Total</div>
+			<p class="image__description">This is the overall site score based on an unweighted average of 
+                                  all eight individual scores. Note that this score is out of 100 possible points</p>
 		  </div>
-	  </div><div class="image">
+	  </div>
+             <div class="image">
 		  <img class="image__img" src="richness.png" alt="Richness">
 		  <div class="image__overlay">
 			<div class="image__title">Richness</div>
